--- a/public/assets/fontawesome-pro/less/brands.less
+++ b/public/assets/fontawesome-pro/less/brands.less
@@ -1,8 +1,13 @@
 /*!
- * Font Awesome Pro 6.0.0-beta2 by @fontawesome - https://fontawesome.com
+ * Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license (Commercial License)
+ * Copyright 2022 Fonticons, Inc.
  */
 @import "_variables.less";
+
+:root, :host {
+  --@{fa-css-prefix}-font-brands: normal 400 1em/1 "Font Awesome 6 Brands";
+}
 
 @font-face {
   font-family: 'Font Awesome 6 Brands';
@@ -14,7 +19,7 @@
 }
 
 .fab,
-.fa-brands {
+.@{fa-css-prefix}-brands {
   font-family: 'Font Awesome 6 Brands';
   font-weight: 400;
 }
