--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -3,6 +3,8 @@
 */
 .settings_wrapper {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .user_profile_wrapper {
@@ -16,23 +18,21 @@
 .user_profile_basic_info {
     display: flex;
     flex-direction: column;
-    width: 500px;
-    margin-right: 50px;
+    max-width: 500px;
 }
 
 .user_profile_picture_wrapper {
-    position: relative;
     width: 100%;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .user_profile_picture {
+    position: relative;
     width: 170px;
     height: 170px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,6 +43,7 @@
 }
 
 .user_profile_picture_edit {
+    font-size: 0.6em;
     position: absolute;
     height: 35px;
     width: 35px;
@@ -52,8 +53,8 @@
     align-items: center;
     border-radius: 50%;
     color: white;
-    top: 150px;
-    right: 180px;
+    top: 140px;
+    left: 110px;
     cursor: pointer;
 }
 
