--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,3 +53,11 @@ body {
     left: 250px;
   }
 }
+
+@media only screen and (max-width: 820px) {
+  .main,
+  .main.active {
+    left: 0;
+    width: 100vw;
+  }
+}
