--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -48,7 +48,7 @@
     align-items: center;
     overflow: hidden;
     transition: width 0.225s ease, left 0.225s ease;
-    z-index: 100000;
+    z-index: 100001;
 
     &.active {
         width: 250px;
@@ -178,6 +178,31 @@
     }
 }
 
+.sidebar_mobile_overlay {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100000;
+    display: none;
+    animation: fadeIn;
+    animation-duration: 0.225s;
+}
+
+@media only screen and (max-width: 820px) {
+    .sidebar {
+        left: -65px;
+
+        &.active {
+            left: 0;
+            width: 250px;
+        }
+    }
+
+    .sidebar_mobile_overlay {
+        display: block;
+    }
+}
+
 /*
   Navbar
 */
@@ -233,5 +258,12 @@
     &_icon {
         margin-left: 10px;
         font-size: 1.1em;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .navbar {
+        left: 0;
+        width: 100vw;
     }
 }
