--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -20,7 +20,7 @@
             content: "\f111";
             font: var(--fa-font-solid);
             position: absolute;
-            color: #ff4757;
+            color: rgba(231, 76, 60, 1);
             font-size: 7px;
             top: 12px;
             right: 12px;
