--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -36,23 +36,21 @@
     align-items: center;
 }
 
-.register_wrapper {
-    right: 0;
-}
-
-.login_wrapper {
-    left: 0;
+.auth_page_wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .auth_form_wrapper {
-    position: absolute;
-    top: 0;
-    height: 100vh;
-    padding: 200px;
+    min-height: 100vh;
+    flex-grow: 1;
+    max-width: calc(100vw - 65%);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1;
+    padding: 24px;
 }
 
 .auth_form_content {
@@ -75,6 +73,10 @@
     color: white;
     cursor: pointer;
     font-size: 1em;
+
+    &:disabled,
+    &[disabled] {
+    }
 }
 
 .auth_form_forgot_password,
@@ -110,17 +112,17 @@
 
 .auth_overlay {
     overflow: hidden;
-    position: fixed;
+    position: absolute;
     z-index: 1000;
     top: 0;
     right: 0;
     bottom: 0;
-    width: calc(100vw - 700px);
+    width: calc(100vw - 35%);
     background-color: rgba(83, 82, 237, 1);
     transition: right 0.7s cubic-bezier(0.72, -0.39, 0.5, 0.74);
 
     &.register {
-        right: 700px;
+        right: 35%;
 
         & .auth_overlay_content {
             left: 0;
@@ -132,25 +134,24 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
-    left: -700px;
+    left: calc(-100vw + 100%);
     transition: left 0.7s cubic-bezier(0.72, -0.39, 0.5, 0.74);
 }
 
 .auth_info_wrapper {
-    height: calc(100vh - 100px);
+    height: 100vh;
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 225px;
     top: 0;
     right: 100px;
     transition: left 0.7s cubic-bezier(0.75, -0.01, 0.5, 0.74), right 0.7s cubic-bezier(0.75, -0.01, 0.5, 0.74);
 
     &.active {
-        right: -500px;
+        right: -30%;
     }
 
     &.register {
@@ -158,20 +159,23 @@
         left: 100px;
 
         &.active {
-            left: -500px;
+            left: -30%;
         }
     }
 }
 
 .auth_info_svg {
     filter: drop-shadow(3px 5px 5px rgb(0 0 0 / 0.6));
-    width: 600px;
+    max-width: -webkit-fill-available;
+    margin-bottom: 32px;
 }
 
 .auth_info_text {
+    text-align: center;
     font-size: 1.8em;
     color: white;
     font-weight: 600;
+    text-shadow: -1px -1px 0px rgb(0 0 0 / 0.2), 2px 2px 0px rgb(0 0 0 / 0.2), 4px 4px 0px rgb(0 0 0 / 0.2);
 }
 
 .auth_info_sub_text {
@@ -180,6 +184,78 @@
     font-size: 1em;
     color: rgba(255, 255, 255, 0.7);
     font-weight: 500;
+    text-shadow: -1px -1px 0px rgb(0 0 0 / 0.2), 1.5px 1.5px 0px rgb(0 0 0 / 0.2), 3px 3px 0px rgb(0 0 0 / 0.2);
+}
+
+@media (max-width: 1350px) {
+    .auth_info_wrapper.register {
+        left: 50px;
+    }
+
+    .auth_info_text {
+        font-size: 1.4em;
+    }
+
+    .auth_info_sub_text {
+        font-size: 0.9em;
+    }
+}
+
+@media (max-width: 969px) {
+    .auth_page_wrapper {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .auth_form_wrapper {
+        max-width: 100%;
+    }
+
+    .auth_overlay {
+        top: 50%;
+        right: 0;
+        height: 100vh;
+        width: 100vw;
+
+        &.register {
+            right: 0;
+            top: 0;
+
+            & .auth_overlay_content {
+                bottom: -100%;
+            }
+        }
+    }
+
+    .auth_overlay_content {
+        left: 0;
+        bottom: 0;
+        height: 200vh;
+    }
+
+    .auth_info_wrapper {
+        height: 100vh;
+        width: 90%;
+        top: 0;
+        left: 5%;
+
+        &.active {
+            right: 0;
+        }
+
+        &.register {
+            top: 100vh;
+            left: 5%;
+
+            &.active {
+                left: 5%;
+            }
+        }
+    }
+
+    .auth_info_svg {
+        max-height: 300px;
+    }
 }
 
 /*
