--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -73,9 +73,12 @@
     color: white;
     cursor: pointer;
     font-size: 1em;
+    transition: background 0.225s ease;
 
     &:disabled,
     &[disabled] {
+        cursor: default;
+        background: rgba(83, 82, 237, 0.5);
     }
 }
 
