Added api call response handling

--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -63,6 +63,14 @@
     margin-bottom: 12px;
 }
 
+.auth_form_error {
+    text-align: center;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    color: rgba(231, 76, 60, 1);
+    font-size: 0.9em;
+}
+
 .auth_submit_btn {
     margin: 32px auto 12px auto;
     width: 100%;
