Added sweet alert to manage popups and toasts

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -253,3 +253,11 @@
   font-weight: 600;
   margin-bottom: 12px;
 }
+
+/*
+ Sweet alert custom classes
+*/
+.swal_custom_confirm {
+  background-color: rgba(83, 82, 237, 1);
+  color: white;
+}
