--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -258,6 +258,7 @@
         align-items: center;
         border-radius: 50%;
         background-color: #7bed9f;
+        object-fit: cover;
         display: none;
     }
 
