updated passwordvalidation animation

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -175,11 +175,18 @@
   min-width: 260px;
   position: absolute;
   z-index: 1000000;
+  bottom: 58px;
+  right: 0;
   background-color: #2f3542;
   padding: 24px 16px;
   border-radius: 8px;
   color: #fff;
   font-size: 0.9em;
+  animation-duration: 0.5s !important;
+
+  &.hidden {
+    pointer-events: none;
+  }
 
   &::before {
     content: "";
@@ -187,7 +194,7 @@
     position: absolute;
     background-color: #2f3542;
     bottom: -7.5px;
-    left: 16px;
+    right: 32px;
     height: 15px;
     width: 15px;
   }
