--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -380,6 +380,15 @@
     border-radius: 50%;
     background-color: #7bed9f;
     cursor: pointer;
+    object-fit: cover;
+}
+
+.user_profile_picture_input {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    height: 0;
+    width: 0;
 }
 
 .user_profile_picture_edit {
@@ -396,6 +405,7 @@
     top: 140px;
     left: 110px;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .app_setting_wrapper {
