--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -498,7 +498,6 @@
     align-items: center;
 
     &_item {
-        // .LoaderBalls__wrapper__item
         $anim-drt: 0.4s;
         $anim-ease: cubic-bezier(0.6, 0.05, 0.15, 0.95);
         width: 20px;
@@ -511,11 +510,11 @@
         }
 
         &:nth-child(2) {
-            animation: bouncing $anim-drt $anim-drt/4 alternate infinite $anim-ease backwards;
+            animation: bouncing $anim-drt calc($anim-drt/4) alternate infinite $anim-ease backwards;
         }
 
         &:nth-child(3) {
-            animation: bouncing $anim-drt $anim-drt/2 alternate infinite $anim-ease backwards;
+            animation: bouncing $anim-drt calc($anim-drt/2) alternate infinite $anim-ease backwards;
         }
     }
 }
@@ -528,4 +527,59 @@
     100% {
         transform: translate3d(0, -20px, 0) scale(0.9, 1.1);
     }
+}
+
+/*
+  Boards page
+*/
+.boards_page_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.board_filter_wrapper {
+}
+
+.board_filter_wrapper_label {
+    display: block;
+    font-weight: 500;
+    font-size: 0.9em;
+    margin-bottom: 8px;
+}
+
+.board_filter_search {
+    position: relative;
+
+    &::before {
+        content: "\f002";
+        font: var(--fa-font-regular);
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        transform: translateY(-50%);
+        color: #a9a9a9;
+    }
+}
+
+.board_filter_search_input {
+    border: 2px solid rgba(83, 82, 237, 0.3);
+    background-color: rgba(83, 82, 237, 0.05);
+    padding: 8px;
+    padding-left: 40px;
+    display: block;
+    border-radius: 8px;
+    font-size: 0.95em;
+    line-height: 1.5;
+    width: 100%;
+    box-shadow: none;
+    transition: background 0.225s ease, border 0.225s ease;
+
+    
+  &:focus-within {
+    outline: none;
+  }
+}
+
+.boards_list {
 }
