--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -539,6 +539,7 @@
 }
 
 .board_filter_wrapper {
+    margin: 12px 0;
 }
 
 .board_filter_wrapper_label {
@@ -575,11 +576,121 @@
     box-shadow: none;
     transition: background 0.225s ease, border 0.225s ease;
 
-    
-  &:focus-within {
-    outline: none;
-  }
+    &:focus-within {
+        outline: none;
+    }
+}
+
+.boards_list_count {
+    margin: 12px 0;
+    font-size: 0.9em;
+    color: #57606f;
 }
 
 .boards_list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+}
+
+.board_btn_wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgba(83, 82, 237, 0.7);
+    cursor: pointer;
+    width: 265px;
+    height: 100px;
+    padding: 8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    border-radius: 8px;
+    font-size: 0.95em;
+
+    &::after {
+        transition: opacity 0.225s ease, color 0.225s ease;
+        opacity: 0;
+        content: "\f005";
+        position: absolute;
+        right: 12px;
+        bottom: 12px;
+        font: var(--fa-font-regular);
+        color: white;
+    }
+
+    &:hover {
+        & .board_btn_activity {
+            opacity: 1;
+        }
+
+        &:after {
+            opacity: 1;
+        }
+    }
+
+    &.favorite:after {
+        font: var(--fa-font-solid);
+        color: #f1c40f;
+    }
+
+    &.add_board {
+        background-color: #f1f2f6;
+        justify-content: center;
+        align-items: center;
+
+        &::after {
+            content: "";
+        }
+    }
+}
+
+.add_board_btn_text {
+    text-align: center;
+}
+
+.board_btn_title {
+    font-weight: 600;
+    color: #fff;
+}
+
+.board_btn_activity {
+    transition: opacity 0.225s ease;
+    opacity: 0;
+    line-height: 0.7;
+    font-size: 0.8em;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.board_btn_member_wrapper {
+    margin-right: 4px;
+    float: left;
+    font-size: 0.8em;
+}
+
+.board_btn_member {
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: #7bed9f;
+    object-fit: cover;
+
+    &.add {
+        background-color: #f1f2f6;
+        font-size: 0.9em;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .board_btn_wrapper {
+        width: calc(50% - 6px);
+    }
+}
+
+@media only screen and (max-width: 512px) {
+    .board_btn_wrapper {
+        width: 100%;
+    }
 }
