--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -73,6 +73,7 @@
     align-items: center;
     padding-left: 12px;
     padding-right: 12px;
+    z-index: 1002;
 }
 
 .app_title {
@@ -105,6 +106,18 @@
     left: 0;
     width: 100%;
     padding: 20px 8px;
+    z-index: 1001;
+}
+
+.sidebar_item_indicator {
+    position: absolute;
+    width: 7px;
+    height: 44px;
+    background-color: rgba(83, 82, 237, 1);
+    top: 0;
+    right: -2px;
+    border-radius: 8px;
+    transition: top 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .sidebar_items_children {
